# A-dhy-y-

./: .clang-format  .gitignore  01_README_Vision_and_Value.md  02_Paninian_Domain_Knowledge.md  03_Theoretical_to_Technical_Glossary.md  04_Architecture_and_System_Design.md  05_The_Paninian_Rule_Engine.md  06_State_Context_and_Execution_Pipeline.md  07_Data_Structures_Memory_and_Performance.md  08_Developer_Build_and_Contribution_Guide.md  09_Testing_Validation_and_Debugging.md  10_User_Manual_and_API_Integration.md  11_Known_Issues_Edge_Cases_and_Roadmap.md  AGENTS.md  CMakeLists.txt  Makefile  README.md  libashtadhyayi.pc.in
.cursor/stories/: STORY_0_1_repo_scaffold.md  STORY_0_2_sutrapatha_ingestion.md  STORY_0_3_dhatupatha_ingestion.md  STORY_0_4_ganapatha_ingestion.md  STORY_0_5_pratyahara_ingestion.md  STORY_0_5_reference_oracles.md  STORY_0_6_shivasutra_data.md  STORY_1_1_varna_type_system.md  STORY_1_2_pratyahara_engine.md  STORY_1_3_encoding_codec.md  STORY_1_4_sandhi_vowel.md  STORY_1_5_sandhi_consonant_visarga.md  STORY_2_1_sutra_loader.md  STORY_2_2_samjna_registry.md  STORY_2_3_anubandha.md  STORY_2_4_5_6_adhikara_anuvrtti_paribhasha.md  STORY_3_1_to_3_6_prakriya_tinanta.md  STORY_4_1_to_4_5_subanta.md  STORY_5_1_pipeline.md  STORY_5_2_samasa.md  STORY_5_3_krit_primary.md  STORY_5_4_taddhita.md  STORY_5_5_unadi.md  STORY_6_1_to_6_6_validation_api_release.md
ancillary/dhatupatha/: dhatupatha.c  dhatupatha.h
ancillary/ganapatha/: ganapatha.c  ganapatha.h
ancillary/unadipatha/: unadi.c  unadi.h
core/conflict/: conflict.c  conflict.h
core/metadata/: adhikara.c  adhikara.h  anubandha.c  anubandha.h  anuvrtti.c  anuvrtti.h  paribhasha.c  paribhasha.h  samjna.c  samjna.h
core/phonology/: pratyahara.c  pratyahara.h  varna.c  varna.h
core/sutrapatha/: sutra.h  sutra_loader.c
data/: README.md  SOURCE.md  dhatupatha.tsv  ganapatha.tsv  pratyahara.tsv  sutras.tsv  unadipatha.tsv
encoding/: encoding.c  encoding.h
examples/: demo.c
include/: ashtadhyayi.h
prakriya/: context.c  context.h  guna_vrddhi.c  guna_vrddhi.h  pipeline.c  pipeline.h  term.c  term.h
prakriya/krit/: krit_primary.c  krit_primary.h
prakriya/subanta/: a_stem.c  a_stem.h  aaiu_stems.c  aaiu_stems.h  consonant_stems.c  consonant_stems.h  karaka.c  karaka.h  vibhakti.c  vibhakti.h
prakriya/taddhita/: taddhita.c  taddhita.h
prakriya/tinanta/: lakara.c  lakara.h  lat_bhvadi.c  lat_bhvadi.h  ting.c  vikaranas.c  vikaranas.h
samasa/: samasa.c  samasa.h
sandhi/: sandhi_hal.c  sandhi_hal.h  sandhi_visarga.c  sandhi_visarga.h  sandhi_vowel.c  sandhi_vowel.h
tests/: KNOWN_DIFFERENCES.md
tests/unit/: test_a_stem.c  test_aaiu.c  test_anubandha.c  test_build.c  test_consonant.c  test_coverage_branches.c  test_coverage_more.c  test_dhatupatha.c  test_encoding.c  test_ganapatha.c  test_guna_vrddhi.c  test_karaka.c  test_krit.c  test_lakara.c  test_lat_bhvadi.c  test_metadata.c  test_paths.h  test_pipeline.c  test_pratyahara.c  test_samasa.c  test_samjna.c  test_sandhi_hal.c  test_sandhi_vowel.c  test_taddhita.c  test_unadi.c  test_varna.c  test_vibhakti.c
tools/: coverage_report.py  ingest_dhatuforms.py  ingest_dhatupatha.py  ingest_ganapatha.py  ingest_pratyahara.py  ingest_shabda.py  ingest_shabdaprakriya.py  ingest_source.py  ingest_unadipatha.py  run_scl_oracle.py  run_vyakarana_oracle.py
